--- a/도커.md
+++ b/도커.md
@@ -13,3 +13,11 @@ docker tag local-image:tagname new-repo:tagname
 docker stop $(docker ps -a -q)
 docker rm $(docker ps -a -q)
 docker rmi $(docker images -q) 
+
+
+
+docker build -t alphanewbie/leesin:latest .
+
+docker run -d -p 8000:8000 --name springlogview springcloudtest.azurecr.io/springlogview:latest
+
+docker build -t springcloudtest.azurecr.io/springlogview:latest .
