--- a/도커.md
+++ b/도커.md
@@ -1,11 +1,9 @@
 https://siner308.github.io/2019/02/25/django-docker-custom-image/
 
 docker build -t alphanewbie/leesin:latest .
-
 docker push alphanewbie/leesin:latest
 
 docker run -d -p 8000:8000 --name leesin alphanewbie/leesin:latest
-
 docker tag local-image:tagname new-repo:tagname
 
 
@@ -15,9 +13,6 @@ docker rm $(docker ps -a -q)
 docker rmi $(docker images -q) 
 
 
-
-docker build -t alphanewbie/leesin:latest .
-
-docker run -d -p 8000:8000 --name springlogview springcloudtest.azurecr.io/springlogview:latest
-
-docker build -t springcloudtest.azurecr.io/springlogview:latest .
+source ../bin/activate
+python manage.py runserver &
+python request.py &
